# mczify

./: .gitignore  Make  Make.test-suite  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-mathcomp-zify.opam  coq-mczify.opam  examples.v  meta.yml  rocq-mathcomp-zify.opam
.github/workflows/: coq-action.yml  docker-action.yml  nix-action-8.18-2.3.0.yml  nix-action-8.19-2.3.0.yml  nix-action-8.19-2.4.0.yml  nix-action-8.20-2.3.0.yml  nix-action-8.20-2.4.0.yml  nix-action-8.20-2.5.0.yml  nix-action-9.0-2.4.0.yml  nix-action-9.0-2.5.0.yml  nix-action-9.0-master.yml  nix-action-9.1-2.4.0.yml  nix-action-9.1-2.5.0.yml  nix-action-9.1-master.yml  nix-action-master-master.yml
.nix/: config.nix  coq-nix-toolbox.nix
.nix/coq-overlays/mathcomp-zify/: default.nix
examples/: boolean.v  divmod.v  test_algebra.v  test_ssreflect.v  zagier.v
theories/: ssrZ.v  zify.v  zify_algebra.v  zify_ssreflect.v
