opam-version: "2.0"
maintainer: "kazuhiko.sakaguchi@ens-lyon.fr"
version: "dev"

homepage: "https://github.com/math-comp/mczify"
dev-repo: "git+https://github.com/math-comp/mczify.git"
bug-reports: "https://github.com/math-comp/mczify/issues"
license: "CECILL-B"

depends: [ "rocq-mathcomp-zify" { = version } ]
tags: [
  "logpath:mathcomp.zify"
]
authors: [
  "Kazuhiko Sakaguchi"
]

synopsis: "Compatibility package for rocq-mathcomp-zify"
